# tessera

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tasks.py
.github/workflows/: ci.yml
dashboard/: __init__.py  app.py  queries.py
dbt/edgar/: dbt_project.yml  packages.yml  profiles.yml
dbt/edgar/models/marts/: _marts__models.yml  dim_company.sql  fct_financials.sql  mart_fundamentals_annual.sql
dbt/edgar/models/staging/: _sources.yml  _staging__models.yml  stg_companyfacts.sql  stg_submissions.sql  stg_ticker_map.sql
dbt/edgar/seeds/: concept_map.csv
dbt/edgar/tests/: assert_revenue_tags_mapped.sql
docs/: architecture.md  data_model.md  implementation.md
orchestration/: __init__.py  definitions.py
scripts/: __init__.py  ci_seed.py  seed_universe.py
src/tessera/: __init__.py  config.py  errors.py  logging.py
src/tessera/ingestion/: __init__.py  concepts.py  edgar_client.py  models.py  prices.py  run.py  sources.py
src/tessera/lakehouse/: __init__.py  catalog.py  landing.py  schemas.py  writers.py
src/tessera/rag/: __init__.py  chunk_embed.py  filings.py  retriever.py
src/tessera/warehouse/: __init__.py  duckdb_io.py
tests/: conftest.py  test_config.py  test_dashboard_queries.py  test_definitions.py  test_edgar_client.py  test_ingest_run.py  test_lakehouse_integration.py  test_logging.py  test_models.py  test_normalization.py  test_rag_interfaces.py  test_seed_universe.py  test_smoke.py
tests/fixtures/: company_tickers.json  companyfacts_AAPL.json  frames_revenue_2023.json  submissions_AAPL.json
