[project]
name = "tessera"
version = "0.1.0"
description = "Open-source fundamentals data engine: ingest fragmented SEC filings, normalize, query, screen."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "Karthik Darapaneni" }]
keywords = ["sec", "edgar", "xbrl", "lakehouse", "dbt", "iceberg", "fundamentals"]

dependencies = [
    "httpx>=0.27",
    "tenacity>=8.2",
    "dlt>=1.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "pyiceberg[sql-sqlite]>=0.7",
    "pyarrow>=16.0",
    "duckdb>=1.0",
    "dbt-core>=1.8",
    "dbt-duckdb>=1.8",
    "streamlit>=1.36",
    "dagster>=1.8",
    "dagster-webserver>=1.8",
    "soda-core-duckdb>=3.3",
    "invoke>=2.2",
]

[project.optional-dependencies]
cloud = [
    "dbt-snowflake>=1.8",
    "boto3>=1.34",
]
rag = [
    "lancedb>=0.10",
    "sentence-transformers>=3.0",
    "anthropic>=0.34",
    "psycopg[binary]>=3.2",
]

[project.urls]
Homepage = "https://github.com/Karthik-Darapaneni/tessera"
Repository = "https://github.com/Karthik-Darapaneni/tessera"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.2",
    "pytest-mock>=3.14",
    "respx>=0.21",
    "pre-commit>=3.8",
    "types-requests>=2.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tessera"]

# ---------------------------------------------------------------------------
# Ruff — single tool for lint + format.
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "scripts", "orchestration", "dashboard"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = [
    "D107", # missing docstring in __init__ (documented at class level)
    "D203", # 1 blank line before class docstring (conflicts with D211)
    "D213", # multi-line summary on second line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D101", "D102", "D103", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-type-checking]
# Pydantic resolves annotations at runtime to build validators, so imports used
# only in annotations on these base classes must stay at module runtime scope.
runtime-evaluated-base-classes = ["pydantic.BaseModel", "pydantic_settings.BaseSettings"]

[tool.ruff.format]
docstring-code-format = true

# ---------------------------------------------------------------------------
# Mypy — strict typing is a project requirement.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
plugins = ["pydantic.mypy"]
warn_unused_configs = true
disallow_untyped_defs = true
warn_return_any = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "dlt.*",
    "pyiceberg.*",
    "duckdb.*",
    "dagster.*",
    "streamlit.*",
    "soda.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest.
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
# Put the repo root on sys.path so the top-level `scripts` package imports under test.
pythonpath = ["."]
addopts = "-ra -q -m 'not live'"
markers = [
    "live: tests that hit the live SEC EDGAR API (deselected by default)",
    "integration: tests that exercise external engines (duckdb/iceberg)",
]
